# murrelet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/foolish_guillemot/: Cargo.toml
examples/foolish_guillemot/src/: draw.rs  lib.rs  shaders
examples/murrelet_example/: Cargo.toml
examples/murrelet_example/src/: main.rs
examples/murrelet_example/src/configs/: basic.yaml
murrelet/: Cargo.toml
murrelet/src/: prelude.rs
murrelet_common/: Cargo.toml
murrelet_common/src/: assets.rs  color.rs  geometry.rs  idx.rs  intersection.rs  iter.rs  lib.rs  metric.rs  polyline.rs  transform.rs  triangulate.rs
murrelet_draw/: Cargo.toml
murrelet_draw/src/: compass.rs  cubic.rs  curve_drawer.rs  curve_drawer_analysis.rs  draw.rs  drawable.rs  lib.rs  livecodetypes.rs  newtypes.rs  scaffold.rs  sequencers.rs  serialize.rs  style.rs  svg.rs  tesselate.rs  transform2d.rs
murrelet_gen/: Cargo.toml  out
murrelet_gen/examples/: tests.rs
murrelet_gen/src/: lib.rs
murrelet_gen_derive/: Cargo.toml
murrelet_gen_derive/src/: derive_gen.rs  gen_methods.rs  lib.rs  parser.rs
murrelet_gpu/: Cargo.toml  README.md
murrelet_gpu/src/: compute.rs  device_state.rs  editable_shaders.rs  gpu_livecode.rs  gpu_macros.rs  graphics_ref.rs  lib.rs  shader_str.rs  uniforms.rs  window.rs
murrelet_gui/: Cargo.toml  out
murrelet_gui/examples/: tests.rs  tests_schema.rs
murrelet_gui/src/: lib.rs
murrelet_gui_derive/: Cargo.toml
murrelet_gui_derive/src/: derive_gui.rs  lib.rs  parser.rs
murrelet_livecode/: Cargo.toml
murrelet_livecode/src/: app_src.rs  boop.rs  cachedcompute.rs  expr.rs  lazy.rs  lerpable.rs  lib.rs  livecode.rs  nestedit.rs  state.rs  types.rs  unitcells.rs
murrelet_livecode_derive/: Cargo.toml
murrelet_livecode_derive/examples/: tests.rs
murrelet_livecode_derive/src/: derive_cached.rs  derive_graphics_trait.rs  parser.rs
murrelet_livecode_macros/: Cargo.toml
murrelet_livecode_macros/murrelet_livecode_derive/: Cargo.toml
murrelet_livecode_macros/murrelet_livecode_derive/examples/: Cargo.toml  tests.rs
murrelet_livecode_macros/murrelet_livecode_derive/src/: derive_boop.rs  derive_cached.rs  derive_graphics_trait.rs  derive_lazy.rs  derive_lerpable.rs  derive_livecode.rs  derive_nestedit.rs  derive_unitcell.rs  lib.rs  parser.rs  toplevel.rs
murrelet_livecode_macros/src/: lib.rs
murrelet_perform/: Cargo.toml
murrelet_perform/src/: asset_loader.rs  cli.rs  lib.rs  load.rs  perform.rs  reload.rs
murrelet_schema/: Cargo.toml
murrelet_schema/examples/: tests.rs
murrelet_schema/src/: lib.rs
murrelet_schema_derive/: Cargo.toml
murrelet_schema_derive/src/: derive_schema.rs  lib.rs  parser.rs
murrelet_src_audio/: Cargo.toml
murrelet_src_audio/src/: audio_src.rs  lib.rs
murrelet_src_midi/: Cargo.toml
murrelet_src_midi/scripts/: midi_read.rs
murrelet_src_midi/src/: midi.rs
murrelet_src_osc/: Cargo.toml
murrelet_src_osc/scripts/: send.rs
murrelet_src_osc/src/: osc.rs
murrelet_svg/: Cargo.toml
murrelet_svg/src/: svg.rs
tinylivecode/: Cargo.toml
tinylivecode/src/: lib.rs
