[workspace]
members = [
    "murrelet",
    "murrelet_common",
    "murrelet_draw",
    "murrelet_gpu",
    "murrelet_livecode",
    "murrelet_livecode_macros",
    "murrelet_perform",
    "murrelet_src_audio",
    "murrelet_src_midi",
    "murrelet_src_osc",
    "murrelet_svg",
    "examples/murrelet_example",
    "examples/foolish_guillemot",
    "tinylivecode",
    "murrelet_schema",
    "murrelet_schema_derive",
    "murrelet_gui",
    "murrelet_gui_derive",
    "murrelet_gen",
    "murrelet_gen_derive",
]

resolver = "2"
