[workspace]
members = [
    "murrelet",
    "murrelet_common",
    "murrelet_draw",
    "murrelet_gpu",
    "murrelet_livecode",
    "murrelet_livecode_macros",
    "murrelet_livecode_macros/murrelet_livecode_derive",
    "murrelet_perform",
    "murrelet_src_audio",
    "murrelet_src_midi",
    "murrelet_src_osc",
    "murrelet_svg",
    "tinylivecode",
    "murrelet_schema",
    "murrelet_schema_derive",
    "murrelet_gui",
    "murrelet_gui_derive",
    "murrelet_gen",
    "murrelet_gen_derive",
]

resolver = "2"

[workspace.dependencies]
murrelet = { path = "murrelet", version = "0.1.2" }
murrelet_common = { path = "murrelet_common", version = "0.1.2" }
murrelet_draw = { path = "murrelet_draw", version = "0.1.2" }
murrelet_gpu = { path = "murrelet_gpu", version = "0.1.2" }
murrelet_livecode = { path = "murrelet_livecode", version = "0.1.2" }
murrelet_livecode_macros = { path = "murrelet_livecode_macros", version = "0.1.2" }
murrelet_livecode_derive = { path = "murrelet_livecode_macros/murrelet_livecode_derive", version = "0.1.2" }
murrelet_perform = { path = "murrelet_perform", version = "0.1.2" }
murrelet_src_audio = { path = "murrelet_src_audio", version = "0.1.2" }
murrelet_src_midi = { path = "murrelet_src_midi", version = "0.1.2" }
murrelet_src_osc = { path = "murrelet_src_osc", version = "0.1.2" }
murrelet_svg = { path = "murrelet_svg", version = "0.1.2" }
tinylivecode = { path = "tinylivecode", version = "0.1.2" }
murrelet_schema = { path = "murrelet_schema", version = "0.1.2" }
murrelet_schema_derive = { path = "murrelet_schema_derive", version = "0.1.2" }
murrelet_gui = { path = "murrelet_gui", version = "0.1.2" }
murrelet_gui_derive = { path = "murrelet_gui_derive", version = "0.1.2" }
murrelet_gen = { path = "murrelet_gen", version = "0.1.2" }
murrelet_gen_derive = { path = "murrelet_gen_derive", version = "0.1.2" }
