[package]
name = "murrelet"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
readme = "../README.md"
license = "AGPL-3.0-or-later"
description = "Murrelet the live coding framework for visuals"


[features]
schemars = [
    "murrelet_draw/schemars",
    "murrelet_livecode/schemars",
    "murrelet_livecode_macros/schemars",
    "murrelet_livecode_derive/schemars",
    "murrelet_perform/schemars",
]

[dependencies]
glam = "0.28.0"
itertools = "0.10.5"

serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"

murrelet_common = { version = "0.1.2", path = "../murrelet_common" }
murrelet_draw = { version = "0.1.2", path = "../murrelet_draw", default-features = false }
murrelet_livecode = { version = "0.1.2", path = "../murrelet_livecode", default-features = false }
murrelet_livecode_macros = { version = "0.1.2", path = "../murrelet_livecode_macros" , default-features = false }
murrelet_livecode_derive = { version = "0.1.2", path = "../murrelet_livecode_macros/murrelet_livecode_derive/" , default-features = false }
murrelet_perform = { version = "0.1.2", path = "../murrelet_perform", default-features = false }
