[package]
name = "murrelet"
version = "0.1.3"
edition = "2024"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
readme = "../README.md"
license = "AGPL-3.0-or-later"
description = "Murrelet the live coding framework for visuals"


[features]
schemars = [
    "murrelet_draw/schemars",
    "murrelet_livecode/schemars",
    "murrelet_livecode_derive/schemars",
    "murrelet_perform/schemars",
]
# murrelet_gui = [
#     "murrelet_draw/murrelet_gui",
#     "murrelet_livecode/murrelet_gui",
#     "murrelet_livecode_derive/murrelet_gui",
#     "murrelet_perform/murrelet_gui",
# ]

[dependencies]
glam = { version = "0.28.0", features = ["serde"] }
itertools = "0.10.5"

serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"

murrelet_common = { workspace = true }
murrelet_draw = { workspace = true, default-features = false }
murrelet_livecode = { workspace = true, default-features = false }
murrelet_livecode_derive = { workspace = true, default-features = false }
murrelet_perform = { workspace = true, default-features = false }
