[package]
name = "murrelet_common"
version = "0.1.1"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "common functions for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"

[dependencies]
itertools = "0.10.5"
glam = "0.28.0"
palette = "0.7.6"
rand = "0.8"
num-traits = "0.2.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
