[package]
name = "murrelet_common"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "common functions for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"

[dependencies]
itertools = "0.10.5"
glam = "0.28.0"
palette = "0.7.6"
rand = "0.8"
num-traits = "0.2.19"
lerpable = "0.0.2"
murrelet_gui = { version = "0.1.2", path = "../murrelet_gui/", features = ["glam"] }
serde = { version = "1.0.104", features = ["derive"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
