[package]
name = "murrelet_draw"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "drawing functions for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"

[features]
schemars = ["dep:schemars", "murrelet_livecode/schemars", "murrelet_livecode_macros/schemars", "murrelet_livecode_derive/schemars"]
# murrelet_gui = ["dep:murrelet_gui", "murrelet_livecode/murrelet_gui", "murrelet_livecode_macros/murrelet_gui", "murrelet_livecode_derive/murrelet_gui"]

[dependencies]
murrelet_common = { version = "0.1.2", path = "../murrelet_common/" }

murrelet_livecode = { version = "0.1.2", path = "../murrelet_livecode/", default-features = false }
murrelet_livecode_macros = { version = "0.1.2", path = "../murrelet_livecode_macros/", default-features = false }
murrelet_livecode_derive = { version = "0.1.2", path = "../murrelet_livecode_macros/murrelet_livecode_derive/", default-features = false }

lerpable = { version = "0.0.2", path = "../../../../lerpable/lerpable" }

serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"
evalexpr = "11.1.0"
rand = "0.8"
itertools = "0.10.5"
regex = "1.7.3"
glam = "0.28.0"
palette = "0.7.6"
anyhow = "1.0.86"
md-5 = "0.10.6"
hex = "0.4.3"

schemars = { version = "0.8.21", optional = true }
murrelet_gui = { version = "0.1.2", path = "../murrelet_gui/", features = ["glam"] }

kurbo = "0.11"
svg = "0.10.0"
lyon = "0.17"