[package]
name = "murrelet_gen"
version = "0.1.2"
edition = "2021"

[features]
default = []

[dependencies]
murrelet_gen_derive = { path = "../murrelet_gen_derive/" }

thiserror = "2.0.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.8"
glam = "0.28.0"
murrelet_common = { path = "../murrelet_common/" }


[[example]]
name = "tests"
path = "examples/tests.rs"
