[package]
name = "murrelet_gpu"
version = "0.1.0"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"

[features]
nannou = ["wgpu_for_nannou"]
no_nannou = ["wgpu_for_latest"]

[dependencies]
wgpu_for_latest = { package = "wgpu", version = "0.20.1", optional = true }
wgpu_for_nannou = { package = "wgpu", version = "0.17.1", optional = true }

murrelet_common = { path = "../murrelet_common/" }
murrelet_livecode = { path = "../murrelet_livecode/" }
murrelet_draw = { path = "../murrelet_draw/" }
murrelet_livecode_macros = { path = "../murrelet_livecode_macros/" }
murrelet_livecode_derive = { path = "../murrelet_livecode_macros/murrelet_livecode_derive/" }
murrelet_perform = { path = "../murrelet_perform/" }

glam = "0.28.0"
palette = "0.7.6"

serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"
rand = "0.8"
itertools = "0.10.5"
regex = "1.7.3"




image = "0.25.2"

bytemuck="1.16.1"