[package]
name = "murrelet_gpu"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "gpu functions for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"

[features]
default = ["no_nannou"]
nannou = ["wgpu_for_nannou"]
no_nannou = ["wgpu_for_latest"]
schemars = [
    "dep:schemars",
    "murrelet_draw/schemars",
    "murrelet_livecode/schemars",
    "murrelet_perform/schemars",
]


[dependencies]
wgpu_for_latest = { package = "wgpu", version = "0.20.1", optional = true }
wgpu_for_nannou = { package = "wgpu", version = "0.17.1", optional = true }

murrelet_common = { workspace = true }
murrelet_livecode = { workspace = true, default-features = false }
murrelet_draw = { workspace = true, default-features = false }
murrelet_livecode_macros = { workspace = true }
murrelet_livecode_derive = { workspace = true }
murrelet_perform = { workspace = true, default-features = false }

lerpable = { version = "0.0.3" }

glam = { version = "0.28.0", features = ["serde"] }
palette = "0.7.6"

serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"
rand = "0.8"
itertools = "0.10.5"
regex = "1.7.3"

half = "2.4.1"


image = "0.25.2"

bytemuck = { version = "1.16.1", features = ["derive"] }

schemars = { version = "0.8.21", optional = true }
murrelet_gui = { workspace = true, features = ["glam"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
