[package]
name = "murrelet_gui"
version = "0.1.2"
edition = "2021"

[features]
default = []
glam = ["dep:glam"]

[dependencies]
murrelet_gui_derive = "0.1.2"
murrelet_schema = "0.1.2"
murrelet_schema_derive = "0.1.2"

thiserror = "2.0.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

glam = { version = "0.23", optional = true }

[[example]]
name = "tests"
path = "examples/tests.rs"
