[package]
name = "murrelet_livecode"
version = "0.1.1"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "livecode base functions for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"

[dependencies]
murrelet_common = { version = "0.1.0", path = "../murrelet_common/" }
itertools = "0.10.5"
regex = "1.7.3"
uuid = "1.8.0"
rand = "0.8"
glam = "0.28.0"
anyhow = "1.0.86"
noise = "0.9.0"
evalexpr = {version="11.1.0", features = ["serde_support"]}
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"




