[package]
name = "murrelet_livecode"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "livecode base functions for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"

[features]
schemars = ["dep:schemars"]

[dependencies]
murrelet_common = "0.1.2"
murrelet_gui = { version = "0.1.2", features = ["glam"] }

lerpable = "0.0.2"

itertools = "0.10.5"
regex = "1.7.3"
uuid = "1.8.0"
rand = "0.8"
glam = { version = "0.28.0", features = ["serde"] }
anyhow = "1.0.86"
noise = "0.9.0"
evalexpr = { version = "11.1.0", features = ["serde_support"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"
thiserror = "2.0.11"

schemars = { version = "0.8.21", optional = true }
