[package]
name = "murrelet_livecode_macros"
version = "0.1.0"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "livecode macros for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"

[dependencies]
murrelet_livecode_derive = { version = "0.1.0", path = "murrelet_livecode_derive"}
murrelet_livecode = { version = "0.1.0", path = "../murrelet_livecode"}
