[package]
name = "murrelet_livecode_macros"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "livecode macros for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"

[features]
schemars = ["murrelet_livecode/schemars", "murrelet_livecode_derive/schemars"]
# murrelet_gui = ["murrelet_livecode/murrelet_gui", "murrelet_livecode_derive/murrelet_gui"]


[dependencies]
murrelet_livecode_derive = { workspace = true, default-features = false }
murrelet_livecode = { workspace = true, default-features = false }
