[package]
name = "murrelet_perform"
version = "0.1.3"
edition = "2024"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "code to aid a live performance for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"

[features]
for_the_web = []
schemars = [
    "dep:schemars",
    "murrelet_livecode/schemars",
    "murrelet_draw/schemars",
    "murrelet_livecode_derive/schemars",
]

[dependencies]
murrelet_common = { workspace = true }
murrelet_livecode = { workspace = true, default-features = false }
murrelet_draw = { workspace = true, default-features = false }
murrelet_livecode_derive = { workspace = true, default-features = false }
lerpable = { version = "0.0.3" }
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"
evalexpr = "11.1.0"
rand = "0.8"
itertools = "0.10.5"
regex = "1.7.3"
glam = { version = "0.28.0", features = ["serde"] }
palette = "0.7.6"
anyhow = "1.0.86"

schemars = { version = "0.8.21", optional = true }
murrelet_gui = { workspace = true, features = ["glam"] }

clap = { version = "4.5.23", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
