[package]
name = "murrelet_schema"
version = "0.1.3"
edition = "2021"

[features]
default = []
glam = ["dep:glam"]

[dependencies]
murrelet_schema_derive = { workspace = true }
murrelet_common = { workspace = true }

anyhow = "1.0.86"
thiserror = "2.0.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

glam = { version = "0.23", optional = true }

[[example]]
name = "tests"
path = "examples/tests.rs"
