[package]
name = "murrelet_src_midi"
version = "0.1.3"
edition = "2024"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "MIDI input functions for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"

[dependencies]
murrelet_common = { workspace = true }

midir = "0.8.0"

[[example]]
name = "midi_read"
path = "scripts/midi_read.rs"
