[package]
name = "murrelet_src_osc"
version = "0.1.0"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "OSC input functions for murrelet, a livecode framework"
license = "AGPL"


[dependencies]
murrelet_common = { version = "0.1.0", path = "../murrelet_common/" }

uuid = "1.8.0"
rosc = "~0.10"

[[example]]
name = "receive"
path = "scripts/receive.rs"


[[example]]
name = "send"
path = "scripts/send.rs"