[package]
name = "murrelet_src_osc"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "OSC input functions for murrelet, a livecode framework"
license = "AGPL-3.0-or-later"


[dependencies]
murrelet_common = "0.1.2"

uuid = "1.8.0"
rosc = "~0.10"

[[example]]
name = "receive"
path = "scripts/receive.rs"


[[example]]
name = "send"
path = "scripts/send.rs"
