[package]
name = "murrelet_svg"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "turns murrelet things into svgs for export or the web"
license = "AGPL-3.0-or-later"

[features]
schemars = ["murrelet_perform/schemars", "murrelet_draw/schemars"]
# murrelet_gui = ["murrelet_perform/murrelet_gui", "murrelet_draw/murrelet_gui"]

[dependencies]
murrelet_common = "0.1.2"
murrelet_perform = { version = "0.1.2", default-features = false }
murrelet_draw = { version = "0.1.2", default-features = false }
glam = { version = "0.28.0", features = ["serde"] }
itertools = "0.10.5"
svg = "0.10.0"
regex = "1.7.3"
