[package]
name = "murrelet_svg"
version = "0.1.3"
edition = "2024"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "turns murrelet things into svgs for export or the web"
license = "AGPL-3.0-or-later"

[features]
schemars = ["murrelet_perform/schemars", "murrelet_draw/schemars"]

[dependencies]
murrelet_common = { workspace = true }
murrelet_perform = { workspace = true, default-features = false }
murrelet_draw = { workspace = true, default-features = false }
glam = { version = "0.28.0", features = ["serde"] }
itertools = "0.10.5"
svg = "0.10.0"
regex = "1.7.3"
