[package]
name = "tinylivecode"
version = "0.1.3"
edition = "2024"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
description = "a tiny language for embedded live coding"
license = "AGPL-3.0-or-later"

[dependencies]
micromath = "2.1"
