[package]
name = "foolish_guillemot"
version = "0.1.0"
edition = "2021"
authors = ["Jessica Stringham"]


[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1"

glam = "0.28.0"
itertools = "0.10.5"

serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"

murrelet = { path = "../../murrelet/" }
murrelet_common = { path = "../../murrelet_common/" }
murrelet_livecode = { path = "../../murrelet_livecode/" }
murrelet_livecode_macros = { path = "../../murrelet_livecode_macros/" }
murrelet_livecode_derive = { path = "../../murrelet_livecode_macros/murrelet_livecode_derive/" }
murrelet_perform = { path = "../../murrelet_perform/" }
murrelet_draw = { path = "../../murrelet_draw/" }
murrelet_svg = { path = "../../murrelet_svg/" }
murrelet_gpu = { path = "../../murrelet_gpu/", features = ["no_nannou"] }


wgpu = { version = "0.20.1", features = ["webgpu", "webgl"] }
anyhow = "1.0.86"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

# todo: sort out dev build
[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d"
]
