[package]
name = "foolish_guillemot"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham"]


[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1"

glam = { version = "0.28.0", features = ["serde"] }
itertools = "0.10.5"

serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"

murrelet = "0.1.2"
murrelet_common = "0.1.2"
murrelet_livecode = "0.1.2"
murrelet_livecode_macros = "0.1.2"
murrelet_livecode_derive = "0.1.2"
murrelet_perform = { version = "0.1.2", features = [
  "for_the_web",
] }
murrelet_draw = "0.1.2"
murrelet_svg = "0.1.2"
murrelet_gpu = { version = "0.1.2", features = [
  "no_nannou",
] }

lerpable = { version = "0.0.2" }

wgpu = { version = "0.20.1", features = ["webgpu", "webgl"] }
anyhow = "1.0.86"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

# todo: sort out dev build
[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
]
