[package]
name = "murrelet_example"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"

[dependencies]
glam = "0.28.0"
itertools = "0.10.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.9.17"

murrelet = "0.1.1"
murrelet_livecode = "0.1.1"
murrelet_livecode_macros = "0.1.1"
murrelet_common = "0.1.1"
murrelet_livecode_derive = "0.1.1"
murrelet_perform = "0.1.1"
murrelet_draw = "0.1.1"
murrelet_svg = "0.1.1"

murrelet_src_audio = "0.1.1"
murrelet_src_midi = "0.1.1"

lerpable = "0.0.2"
schemars = "0.8.21"
