[package]
name = "murrelet_livecode_derive"
version = "0.1.1"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
license = "AGPL-3.0-or-later"
description = "macros for murrelet, a live coding framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[features]
schemars = ["murrelet_livecode/schemars"]

[dependencies]
syn = "2.0.15"
quote = "1.0.18"
proc-macro2 = "1.0.37"
darling = "0.20.3"
serde = { version = "1.0.104", features = ["derive"] }
murrelet_livecode = { version = "0.1.0", path = "../../murrelet_livecode", default-features = false}

# just for examples...
murrelet_common = { version = "0.1.0", path = "../../murrelet_common"}
glam = "0.28.0"
palette = "0.7.6"

[[example]]
name = "tests"
path = "examples/tests.rs"
