[package]
name = "murrelet_livecode_derive"
version = "0.1.2"
edition = "2021"
authors = ["Jessica Stringham <jessica@thisxorthat.art>"]
repository = "https://github.com/jessstringham/murrelet.git"
license = "AGPL-3.0-or-later"
description = "macros for murrelet, a live coding framework"

[lib]
proc-macro = true

[features]
schemars = ["murrelet_livecode/schemars"]

[dependencies]
syn = "2.0.15"
quote = "1.0.18"
proc-macro2 = "1.0.37"
darling = "0.20.3"
serde = { version = "1.0.104", features = ["derive"] }
murrelet_livecode = { version = "0.1.1", path = "../../murrelet_livecode", default-features = false}

# just for examples...
[dev-dependencies]
murrelet_common = { version = "0.1.1", path = "../../murrelet_common"}
glam = "0.28.0"
palette = "0.7.6"
lerpable = "0.0.2"
schemars = "0.8.21"

[[example]]
name = "tests"
path = "examples/tests.rs"
